# ai-one-client

./: AGENTS.md  README.md  eslint.config.js  overlay-control.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.agents/skills/base-rules/: SKILL.md
.agents/skills/project-memory/: SKILL.md
.agents/skills/project-memory/agents/: openai.yaml
.agents/skills/tauri-vue3-best-practices/: SKILL.md
.agents/skills/tauri-vue3-best-practices/agents/: openai.yaml
.agents/skills/vue-component-development/: SKILL.md
docs/ai-memory/: README.md  change-log.md  engineering-context.md  open-questions.md  product-context.md
scripts/: run-tauri.mjs  run-vite-dev.mjs
src/: App.vue  auto-imports.d.ts  main.ts  overlay-control.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  provider-links.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.vue  CampSwitch.vue  CustomProviderDialog.vue  ProviderListItem.vue
src/features/providers/: providers.ts
src/lib/: i18n.ts  shortcut.ts  store.ts  theme.ts
src/pages/: ModelSelectionPage.vue  SettingsPage.vue  WorkspacePage.vue
src/router/: index.ts
src/stores/: hotkey.ts  preferences.ts  workspace.ts
src/styles/: app.css
src/types/: provider.ts
