[package]
name = "aiclientcore"
version = "0.1.5"
description = "AI conversation aggregator desktop client built with Tauri"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "aiclientcore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.3"
