[package]
name = "aiclientcore"
version = "0.1.8"
description = "AI conversation aggregator desktop client built with Tauri"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "aiclientcore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "unstable", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
